objects/LBI__PrimaryAttributeMapping__c.object
<CustomObject>
    <fields>
        <fullName>LBI__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ObjectName__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__PrimaryAttribute__c</fullName>
        <label>Lattice Primary Attribute</label>
        <referenceTo>LBI__PrimaryAttribute__c</referenceTo>
        <relationshipLabel>Lattice Primary Attribute Mappings</relationshipLabel>
        <relationshipName>LatticePrimaryAttributeMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Lattice Primary Attribute Mapping</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__PrimaryAttribute__c</columns>
        <columns>LBI__ObjectName__c</columns>
        <columns>LBI__FieldName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAM-{0000000000}</displayFormat>
        <label>Primary Attribute Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Primary Attribute Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>